mesh-federation/auto-passthrough-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-eastwestgateway
spec:
  selector:
    istio: eastwestgateway
  servers:
  - port:
      number: 15443
      name: tls
      protocol: TLS
    hosts:
    - "httpbin.httpbin.svc.cluster.local"
    tls:
      mode: AUTO_PASSTHROUGH
